changed background and other items

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <title>About | Garrett Straight</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
 
 </head>
+<div class="container"></div>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body background="assets/images/littleG404.png">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <span class="navbar-brand mb-1 h1">Garrett Straight</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,36 +40,37 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <div class="page-header">
+        <div class="page-header text-info">
           <h1>About Me</h1>
         </div>
         <div class="row">
           <div class="col-md-4">
             <img src="assets/images/Garrett Pic.jpg" alt="Garrett Straight" class="img-thumbnail">
           </div>
-          <div class="col-md-8">
+          <div class="col-md-8 text-white">
             <div class="float-md-right">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum tristique,
-              nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae
-              felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem</p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum tristique,
+                nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae
+                felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem</p>
               <p>non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus,
-              luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et</p>
+                luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et</p>
               <p>neque fringilla ultricies. Aenean at feugiat elit, a posuere justo. Pellentesque egestas
-              dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id
-              posuere sem congue a.
-            </p>
+                dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id
+                posuere sem congue a.
+              </p>
             </div>
           </div>
         </div>
       </div>
       <!--Create Card taking up 4 Columns-->
       <div class="col-md-4">
-        <div class="card mt-2">
-          <div class="card-body">
-            <h5 class="card-title">Garrett Straight</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Full Stack Web Developer</h6>
-            <p class="card-text">Moving forward with a creative approach to Development. Collaborative thinking in a team environment, fosters strong relationships.</p>
+        <div class="card mt-2 bg-info">
+          <div class="card-body text-white">
+            <h5 class="card-title text-dark">Garrett Straight</h5>
+            <h6 class="card-subtitle mb-2 text-white">Full Stack Web Developer</h6>
+            <p class="card-text">Moving forward with a creative approach to Development. Collaborative thinking in a
+              team environment, fosters strong relationships.</p>
           </div>
         </div>
       </div>
@@ -75,7 +78,7 @@
   </div>
 
 
- 
+
 
   <!-- jQuery CDN -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -84,12 +87,13 @@
 
   <!-- Bootstrap JavaScript CDN -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</body>
 
+</body>
 <footer>
-        <div class="row">
-            <div class="col-md-12">
-            <div class="text-center fixed-bottom p-3 mb-2 bg-dark text-white">Copyright &copy Garrett Straight</div>
-  
+  <div class="row">
+    <div class="col-md-12">
+      <div class="text-center fixed-bottom p-3 mb-2 bg-dark text-white">Copyright &copy Garrett Straight</div>
+
 </footer>
+
 </html>
