--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">About</a>
+          <a class="nav-link" href="https://github.com/GarrettStraight" target="blank">
+            <img src="assets/images/github.png" width="30" height="30" alt="Github"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-link" href="https://www.linkedin.com/in/garrett-straight-44438010/" target="blank">
+              <img src="assets/images/LinkedIn.png" width="30" height="30" alt="LinkedIn"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Contact.html">Contact</a>
+          <a class="nav-link" href="mailto:garrett.straight@gmail.com">Contact</a>
         </li>
       </ul>
     </div>
@@ -50,14 +52,7 @@
           <div class="col-md-8 text-white">
             <div class="float-md-right">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum tristique,
-                nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae
-                felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem</p>
-              <p>non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus,
-                luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et</p>
-              <p>neque fringilla ultricies. Aenean at feugiat elit, a posuere justo. Pellentesque egestas
-                dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id
-                posuere sem congue a.
+                I am an experienced professional "Full Stack Web Developer" with a solid background in servicing corporate IT solutions for improved business efficiency and client-facing services. I have studied and gained Full Stack proviciency through the UW coding bootcamp. Learning current trends and process to be market competitive. Keeping my mind open through playing music throughout my life has helped me with divergent thinking throughout my IT career. Collaborative teamwork, maintaining compliance and communicating the right solution to any given problem is something I pride myself on. I am looking to offer my services in the  web development forum.
               </p>
             </div>
           </div>
@@ -65,22 +60,32 @@
       </div>
       <!--Create Card taking up 4 Columns-->
       <div class="col-md-4">
-        <div class="card mt-2 bg-info">
+        <div class="card mt-2 bg-transparent">
           <div class="card-body text-white">
-            <h5 class="card-title text-dark">Garrett Straight</h5>
+            <h5 class="card-title text-info">Garrett Straight</h5>
             <h6 class="card-subtitle mb-2 text-white">Full Stack Web Developer</h6>
             <p class="card-text">Moving forward with a creative approach to Development. Collaborative thinking in a
-              team environment, fosters strong relationships.</p>
+              team environment, fosters strong relationships.    
+             </p>
+                           
+          </div>
+          <div class="dropdown">
+            <a class="btn btn-secondary btn-lg btn-block" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Portfolio
+            </a>
+          
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item" href="https://garrettstraight.github.io/Team-7-First-Web-Dev-Project/"target="_blank">Team Project 1</a>
+              <a class="dropdown-item" href="https://garrettstraight.github.io/SimpleTrainScheduler/"target="_blank">Simple Train Schedule Project</a>
+              <a class="dropdown-item" href="https://garrettstraight.github.io/HW-TriviaGame/"target="_blank">Trivia Game Project</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-
-
-
-  <!-- jQuery CDN -->
+<br>
+<br>>DN -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
