Updated Code Link

--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
           
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item" href="https://garrettstraight.github.io/Team-7-First-Web-Dev-Project/"target="_blank">Team Project 1</a>
+              <a class="dropdown-item" href="https://github.com/GarrettStraight/Team-7-First-Web-Dev-Project"target="_blank">Github Code</a>
               <a class="dropdown-item" href="https://garrettstraight.github.io/SimpleTrainScheduler/"target="_blank">Simple Train Schedule Project</a>
+              <a class="dropdown-item" href="https://github.com/GarrettStraight/SimpleTrainScheduler"target="_blank">Github Code</a>
               <a class="dropdown-item" href="https://garrettstraight.github.io/HW-TriviaGame/"target="_blank">Trivia Game Project</a>
+              <a class="dropdown-item" href="https://github.com/GarrettStraight/HW-TriviaGame"target="_blank">Github Code</a>
             </div>
           </div>
         </div>
