updating index.html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             <div class="float-md-right">
               <p>
                 I am an experienced professional "Full Stack Web Developer" with a solid background in servicing corporate IT solutions for improved business efficiency and client-facing services. I have studied and gained Full Stack proviciency through the UW coding bootcamp. Learning current trends and process to be market competitive. Keeping my mind open through playing music throughout my life has helped me with divergent thinking throughout my IT career. Collaborative teamwork, maintaining compliance and communicating the right solution to any given problem is something I pride myself on. I am looking to offer my services in the  web development forum.
+                </p>
+                <p>
+                I have worked on development teams creating the scope of a project. The scope being, coming up with a concept and working through to the completed web app. Learning how to work on a team is an essential skill that contributes to the success of any project.
               </p>
             </div>
           </div>
@@ -75,12 +78,16 @@
             </a>
           
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item" href="https://murmuring-retreat-47548.herokuapp.com/"target="_blank">Team Project 2</a>
+              <a class="dropdown-item" href="https://github.com/GarrettStraight/project2/"target="_blank">Project 2 Github Code</a>
+              <a class="dropdown-item" href="https://garrettstraight.github.io/Liri-Bot/"target="_blank">Liri-Bot</a>
+              <a class="dropdown-item" href="https://github.com/GarrettStraight/Liri-Bot"target="_blank">Liri Bot Github Code</a>
               <a class="dropdown-item" href="https://garrettstraight.github.io/Team-7-First-Web-Dev-Project/"target="_blank">Team Project 1</a>
-              <a class="dropdown-item" href="https://github.com/GarrettStraight/Team-7-First-Web-Dev-Project"target="_blank">Github Code</a>
+              <a class="dropdown-item" href="https://github.com/GarrettStraight/Team-7-First-Web-Dev-Project"target="_blank">Project 1 Github Code</a>
               <a class="dropdown-item" href="https://garrettstraight.github.io/SimpleTrainScheduler/"target="_blank">Simple Train Schedule Project</a>
-              <a class="dropdown-item" href="https://github.com/GarrettStraight/SimpleTrainScheduler"target="_blank">Github Code</a>
+              <a class="dropdown-item" href="https://github.com/GarrettStraight/SimpleTrainScheduler"target="_blank">Scheduler Github Code</a>
               <a class="dropdown-item" href="https://garrettstraight.github.io/HW-TriviaGame/"target="_blank">Trivia Game Project</a>
-              <a class="dropdown-item" href="https://github.com/GarrettStraight/HW-TriviaGame"target="_blank">Github Code</a>
+              <a class="dropdown-item" href="https://github.com/GarrettStraight/HW-TriviaGame"target="_blank">Trivia Game Github Code</a>
             </div>
           </div>
         </div>
