Updating project repository

--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
             </a>
           
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item" href="https://mysterious-shelf-67322.herokuapp.com/"target="_blank">TutorBuzz Project 3</a>
+              <a class="dropdown-item" href="https://github.com/GarrettStraight/TutorBuzz/"target="_blank">TutorBuzz Project 3 Github Code</a>
               <a class="dropdown-item" href="https://murmuring-retreat-47548.herokuapp.com/"target="_blank">Team Project 2</a>
               <a class="dropdown-item" href="https://github.com/GarrettStraight/project2/"target="_blank">Project 2 Github Code</a>
-              <a class="dropdown-item" href="https://garrettstraight.github.io/Liri-Bot/"target="_blank">Liri-Bot</a>
-              <a class="dropdown-item" href="https://github.com/GarrettStraight/Liri-Bot"target="_blank">Liri Bot Github Code</a>
+              <a class="dropdown-item" href="https://garrett-eddie-app.herokuapp.com/"target="_blank">Memory Clicky Game</a>
+              <a class="dropdown-item" href="https://github.com/GarrettStraight/eddie-clicky-game"target="_blank">Memory Clicky Game Github Code</a>
               <a class="dropdown-item" href="https://garrettstraight.github.io/Team-7-First-Web-Dev-Project/"target="_blank">Team Project 1</a>
               <a class="dropdown-item" href="https://github.com/GarrettStraight/Team-7-First-Web-Dev-Project"target="_blank">Project 1 Github Code</a>
               <a class="dropdown-item" href="https://garrettstraight.github.io/SimpleTrainScheduler/"target="_blank">Simple Train Schedule Project</a>
